# on-done

./: LICENSE  README.md  setup.cfg
.github/workflows/: pypi.yml  test-pypi.yml
src/on_done/: __init__.py  _on_done.py
