[metadata]
name = on-done
version = 0.1.0
author = Parsiad Azimzadeh
author_email = parsiad.azimzadeh@gmail.com
description = IPython/Jupyter cell magic to execute code after a cell succeeds or fails
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parsiad/on-done
project_urls =
    Bug Tracker = https://github.com/parsiad/on-done/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    ipython
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
